[package]
name = "sqlnodes"
version = "0.1.0"
authors = ["nyorain <nyorain@gmail.com>"]
edition = "2018"

[lib]
name = "sqlnodes"
path = "src/lib.rs"

[[bin]]
name = "sqlnodes"
path = "cli/main.rs"

[dependencies]
time = "0.1"
clap = "2.30"
termion = "1.5"
nom = "^4.2"
tempfile = "3"
dirs = "1.0"
toml = "0.5"
# serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]
