[package]
name = "nodes"
version = "0.1.0"
authors = ["nyorain <nyorain@gmail.com>"]
edition = "2018"

[lib]
name = "nodes"
path = "src/lib.rs"

[[bin]]
name = "nodes"
path = "cli/main.rs"

[dependencies]
time = "0.1"
clap = "2.30"
termion = "1.5"
nom = "^4.2"
tempfile = "3"
dirs = "1.0"
toml = "0.5"
regex = "0.2"
# serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]

[patch.crates-io]
# needed for fixed terminal size
termion = { git = "https://gitlab.redox-os.org/xPMo/termion", branch = "tty_size" }
